# Note-Gen

./: .coverage  .env  .flake8  .gitignore  .mypy.ini  .pre-commit-config.bak.yaml  .pre-commit-config.yaml  .pylintrc  .windsurfrules  LICENSE  Makefile  README.md  UPGRADE.md  check_api.py  check_app_db.py  check_chord_progressions.py  check_db.py  check_db_connection.py  check_db_entries.py  check_db_patterns.py  check_dbs.py  check_patterns.py  class_summary.txt  cleanup_database.py  command.sh  conftest.py  database.py  debug_chord_progression_controller.py  debug_note.py  examine_patterns.py  fetch_note_patterns_script.py  fix_chord_progressions.py  fix_note_patterns.py  fix_note_patterns_again.py  import_chord_progressions.py  import_data.py  import_patterns.py  import_patterns_from_constants.py  list_all_dbs.py  list_collections.py  (+30 more)
.devcontainer/: devcontainer.json
db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-12819933605324628451.wt  collection-0-3048872283228935885.wt  collection-2-12819933605324628451.wt  collection-3-3048872283228935885.wt  collection-4-12819933605324628451.wt  collection-54-1331558092754093490.wt  collection-6-3048872283228935885.wt  index-1-12819933605324628451.wt  index-1-3048872283228935885.wt  index-2-3048872283228935885.wt  index-3-12819933605324628451.wt  index-4-3048872283228935885.wt  index-5-12819933605324628451.wt  index-5-3048872283228935885.wt  index-55-1331558092754093490.wt  index-6-12819933605324628451.wt  index-7-3048872283228935885.wt  index-8-3048872283228935885.wt  sizeStorer.wt
docs/: .windsurfrules.md  README.md  _chords_grouped.json  architecture.md  architecture_map.md  coverage.md  model_tracking.md  product_requirement_docs.md  technical.md  upgrade.md
models/: accidental_type.py  base_types.py  chord.py  chord_base.py  chord_progression.py  chord_progression_generator.py  chord_quality.py  chord_type.py  constants.pyi  music_types.py  note.py  note_event.py  note_pattern.py  note_sequence.py  note_utils.py  pattern_interpreter.py  pattern_type.py  patterns.py  patterns.pyi  presets.py  rhythm.py  rhythm_pattern.py  roman_numeral.py  scale.py  scale_degree.py  scale_info.py  scale_type.py  types.py
myenv/: pyvenv.cfg
new_venv/: pyvenv.cfg
note_gen.egg-info/: top_level.txt
scripts/: check_type_coverage.py  cleanup_patterns.py  extract_chord_patterns.py  import_chord_progressions.py  import_note_patterns.py  import_rhythm_patterns.py  populate_db.py  populate_patterns_db.py  update_imports.py  update_scale_types.py
src/: __init__.py  logging_test.py  main.py  setup.py
tasks/: active_context.md  documentation_updates.md  memories.md  test_coverage_plan.md  validation_plan.md
tests/: .coverage  .env.test  README.md  chord_progression_generator_test.py  chord_test.py  conftest.py  imports_test.py  note_test.py  roman_numeral_test.py  scale_test.py  test_api.py  test_chord_progression.py  test_chord_progression_check.py  test_chord_progression_generator.py  test_config.py  test_constants.py  test_database.py  test_dependencies.py  (+9 more)
(+443 files in other folders)
