[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "note_gen"
version = "0.2.0"
description = "Note Generation API"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["note_gen", "note_gen.routers", "note_gen.models"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]