[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "note_gen"
version = "0.2.0"
description = "Note Generation API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "note_gen",
    "note_gen.routers",
    "note_gen.models",
    "note_gen.core",
    "note_gen.services"
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [".", "src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".",
    "src"
]
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.dependencies]
pytest-asyncio = "^0.25.0"
pytest-timeout = "^2.1.0"
